--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea/
+.gradle/
+gradle/
+gradlew
+gradlew.bat
+vendor/
+build/
+package-lock.php.yml
+package.*.yml
+
+!package.php.yml
+build.gradle
+*.iml
